# automod

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: tests.rs
examples/issue4/: with-hyphen.rs
examples/nested/: user.rs
examples/nested/payment/: alipay.rs  wechat.rs
examples/regression/: issue128.rs  mod.rs
src/: error.rs  lib.rs
tests/: tests.rs
tests/dir_mods/: mod.rs
tests/file_mods/: c.rs  mod.rs
tests/mixed_mod_types/: mod.rs
