[package]
name = "automod"
version = "1.0.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "filesystem", "no-std"]
description = "Pull in every source file in a directory as a module."
documentation = "https://docs.rs/automod"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/automod"
rust-version = "1.31"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
