[package]
name = "automod"
version = "1.0.14"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "filesystem", "no-std", "no-std::no-alloc"]
description = "Pull in every source file in a directory as a module."
documentation = "https://docs.rs/automod"
edition = "2021"
exclude = ["examples"] # work around https://github.com/rust-lang/cargo/issues/11496
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/automod"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
